# smallcheck

./: smallcheck.cabal
Test/: SmallCheck.hs
Test/SmallCheck/: Internal.hs
src/Test/SmallCheck/: Series.hs
test/: smallcheck-test.cabal  test.hs
